--- a/hr-payroll/pom.xml
+++ b/hr-payroll/pom.xml
@@ -13,7 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>hr-payroll</name>
 	<description>Payroll Microservice</description>
-	
+
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -43,14 +43,18 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>
+				spring-cloud-starter-netflix-eureka-client
+			</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>
 				spring-cloud-starter-netflix-hystrix
 			</artifactId>
 		</dependency>
-		
 	</dependencies>
 
 	<build>
