Random port to hr-worker

--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=hr-worker
-server.port=8001
+
+#Gerar porta aleatória no eureka
+server.port=${PORT:0}
+
+#Nome da instância no eureka (nome da aplicação):(id da instância):(valor aleatório)
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
