--- a/hr-payroll/src/main/resources/application.properties
+++ b/hr-payroll/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=hr-payroll
-server.port=8101
+#Gerar porta aleatória no eureka
+server.port=${PORT:0}
+
+#Nome da instância no eureka (nome da aplicação):(id da instância):(valor aleatório)
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
