--- a/hr-config-server/src/main/resources/application.properties
+++ b/hr-config-server/src/main/resources/application.properties
@@ -4,3 +4,5 @@ server.port=8888
 
 spring.cloud.config.server.git.uri=https://github.com/FulvioFPimentel/ms-course-configs
 
+spring.cloud.config.server.git.username=${GITHUB_USER}
+spring.cloud.config.server.git.password=${GITHUB_PASS}
