--- a/hr-oauth/src/main/resources/application.properties
+++ b/hr-oauth/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.application.name=hr-oauth
 
+#Gerar porta aleatória no eureka
+server.port=${PORT:0}
+
+#Nome da instância no eureka (nome da aplicação):(id da instância):(valor aleatório)
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
